# dorafactory-node

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  chain-spec.json  docker-compose.yml  dora-2115-dev-genesis  dora-2115-dev-wasm  dora-dev-testnet.json  dorafactory-rococo-2052-raw.json  entrypoint.sh  init_dev.sh  init_start.sh  para-2000-genesis  para-2000-genesis-local  para-2000-wasm  para-2000-wasm-local  para-2008-genesis  para-2008-genesis-live  para-2008-wasm  para-2008-wasm-live  para-2045-genesis  para-2052-genesis  para-2052-wasm  para-2078-genesis  para-2078-wasm  rococo-live-parachain-2000-raw.json  rococo-live-parachain-2008-raw.json  rococo-live-parachain-2078-raw.json  rococo-live-parachain-plain-2000.json  rococo-live-parachain-plain.json  rococo-local-cfde.json  rococo-local-parachain-2000-raw.json  rococo-local-parachain-2008-plain.json  rococo-local-parachain-2008-raw.json  rococo-local-parachain-2045-raw.json  rococo-local-parachain-2052-plain.json  (+4 more)
.github/workflows/: cicd.yml  release.yml
.maintain/: dao-weight-template.hbs  frame-weight-template.hbs
node/: Cargo.toml
node/kusama/: Cargo.toml
node/kusama/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
node/polkadot/: Cargo.toml
node/polkadot/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
node/res/: dora-2115-genesis-ksm-live  dora-2115-genesis-roc-local  dora-2115-ksm-genesis-live  dora-2115-ksm-wasm-live  dora-2115-wasm-roc-local  dora-ksm-mainnet.json  dora-rococo-testnet.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/dao-core/: Cargo.toml
pallets/dao-core/src/: lib.rs  mock.rs  tests.rs
pallets/dora-rewards/: Cargo.toml  README.md
pallets/dora-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/moloch-v2/: Cargo.toml
pallets/moloch-v2/src/: lib.rs  mock.rs  tests.rs  types.json
pallets/quadratic-funding/: Cargo.toml
pallets/quadratic-funding/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: currency.rs  lib.rs
runtime/: Cargo.toml
runtime/kusama/: Cargo.toml
runtime/kusama/src/: constants.rs  lib.rs  xcm_config.rs
runtime/kusama/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/polkadot/: Cargo.toml
runtime/polkadot/src/: constants.rs  lib.rs  xcm_config.rs
runtime/polkadot/src/weights/: extrinsic_weights.rs
runtime/src/: constants.rs  lib.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  rocksdb_weights.rs
scripts/: build.sh  dev_init.sh  dot_init.sh  ksm_init.sh  regenerateConfig-rococo-local.sh  start-all.sh  stop-all.sh
scripts/polkadot/: regenerateConfig-rococo-local.sh  start-all.sh
scripts/polkadot_script/: build.sh  regenerateConfig-rococo-local.sh  stop-all.sh
