[workspace]
members = [
    "node",
    "pallets/*",
    "runtime",
    "primitives",
]
[profile.release]
panic = "unwind"

#[patch.crates-io]
#syn = { git = "https://github.com/dtolnay/syn", rev = "19b3f0b53525ac7ab0882882a822adbd874dbe8c" }
#tracing = { git = "https://github.com/tokio-rs/tracing", rev = "4f1e46306d4d364fcc69691fdb29a676c7105f72" }